--- a/index.html
+++ b/index.html
@@ -8,11 +8,15 @@
 </head>
 <body>
 
-    <header>
-        <div class=""></div>
-    </header>
+    <div class="header">Header Logo
+        <ul>
+            <li><a href="www.google.com">header link one</a></li>
+            <li><a href="www.google.com">header link two</a></li>
+            <li><a href="www.google.com"> header link three</a></li>
+        </ul>
+    </div>
 
-    <div class="">hello</div>
+    <div class=""></div>
     <div class=""></div>
     <div class=""></div>
     <div class=""></div>
