testing divs on the sides

--- a/index.html
+++ b/index.html
@@ -7,13 +7,16 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-
+    <div class="test">
+    <div class="space1">fake</div>
     <div class="header">Header Logo
         <ul>
             <li><a href="www.google.com">header link one</a></li>
             <li><a href="www.google.com">header link two</a></li>
             <li><a href="www.google.com"> header link three</a></li>
         </ul>
+    </div>
+    <div class="space1">fake</div>
     </div>
 
     <div class=""></div>
