potentially fixed fake spaces

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="test">
-    <div class="space1">fake</div>
+    <div class="space1"></div>
     <div class="header">Header Logo
         <ul>
             <li><a href="www.google.com">header link one</a></li>
@@ -16,7 +16,7 @@
             <li><a href="www.google.com"> header link three</a></li>
         </ul>
     </div>
-    <div class="space1">fake</div>
+    <div class="space1"></div>
     </div>
 
     <div class=""></div>
