progress on first h1

--- a/index.html
+++ b/index.html
@@ -18,8 +18,15 @@
     </div>
     <div class="space1"></div>
     </div>
-
-    <div class=""></div>
+    <div class="test">
+        <div class="space1"></div>
+    <div class="h1">
+        <h1>This website is awesome</h1>
+        <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
+        <button>Sign Up</button>
+    </div>
+    <div class="space1"></div>
+    </div>
     <div class=""></div>
     <div class=""></div>
     <div class=""></div>
@@ -27,6 +34,6 @@
     <footer>
         <div class=""></div>
     </footer>
-    
+
 </body>
 </html>
