--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
         <p>This website has some subtext that goes here under the main title. It's a smaller font and the color is lower contrast</p>
         <button>Sign Up</button>
     </div>
+    <div class="image">
+        <img src="" alt="This is a placeholder for an image">
+    </div>
     <div class="space1"></div>
     </div>
     <div class=""></div>
