--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+
     <div class="test">
     <div class="space1"></div>
     <div class="header">Header Logo
@@ -18,6 +19,7 @@
     </div>
     <div class="space1"></div>
     </div>
+
     <div class="test">
         <div class="space1"></div>
     <div class="h1">
@@ -26,11 +28,40 @@
         <button>Sign Up</button>
     </div>
     <div class="image">
-        <img src="" alt="This is a placeholder for an image">
+        <img class="img1" src="./images/download.jpeg" alt="This is a placeholder for an image">
     </div>
     <div class="space1"></div>
     </div>
-    <div class=""></div>
+
+    <div class="container">
+        <div class="space1"></div>
+    <div class="title1">Some random information.</div>
+    <div class="space1"></div>
+    </div>
+    <div class="container">
+        <div class="space1"></div>
+    <div class="info">
+        <img class="image2" src="./images/download.jpeg" alt="placeholder">
+        <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+    
+    <div class="info">
+        <img class="image2" src="" alt="placeholder">
+        <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+    <div class="info">
+        <img class="image2" src="" alt="placeholder">
+        <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+    <div class="info">
+        <img class="image2" src="" alt="placeholder">
+        <div class="text">this is some subtext under an illustration or image</div>
+    </div>
+
+    <div class="space1"></div>
+
+    </div>
+
     <div class=""></div>
     <div class=""></div>
 
