quote in process

--- a/index.html
+++ b/index.html
@@ -33,12 +33,12 @@
     <div class="space1"></div>
     </div>
 
-    <div class="container">
+    <div class="container1">
         <div class="space1"></div>
     <div class="title1">Some random information.</div>
     <div class="space1"></div>
     </div>
-    <div class="container">
+    <div class="container2">
         <div class="space1"></div>
     <div class="info">
         <img class="image2" src="./images/download.jpeg" alt="placeholder">
@@ -62,7 +62,14 @@
 
     </div>
 
-    <div class=""></div>
+    <div class="test2">
+        <div class="space1"></div>
+
+        <div class="quote">This is an inspiring quote, or a testimonial from a customer. Maybe it's just filling up space, or maybe people will actually read it. Who knows? All i know is that it looks nice.</div>
+        <div class="reference">-Thor, God of Thunder</div>
+
+        <div class="space1"></div>
+    </div>
     <div class=""></div>
 
     <footer>
