--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     <div class="container3">
         <div class="dios">
         <div class="h3">Call to action! It's time!</div>
-        <div class="p">Sign up for our product by clicking that butting right over there!</div>
+        <div class="p">Sign up for our product by clicking that button right over there!</div>
         </div>
         <div class="move">
         <button class="button">Sign Up</button>
@@ -82,7 +82,7 @@
     </div>
 
     <footer>
-        <div class=""></div>
+        <div class="">Copyright © The Odin Project 2023</div>
     </footer>
 
 </body>
